src/network_policies/privateintent1default1 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: privateintent1default1
  namespace: default
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: fluidos
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
